@@ -1,3 +1,7 @@
+2011-11-22 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 3.1.0 RC3
+
 2011-11-18 Borut Razem <borut.razem AT siol.net>
 
 	* index.php: added News - sdcc 3.1.0 RC2
